# burger_war

./: README.md  position_logs.csv
BLA/bla_camera/: CMakeLists.txt  package.xml
BLA/bla_camera/src/: camera_subscriber.cpp
BLA/navigation/map_server/maps/: field_map.pgm  field_map.yaml  gmapping.launch
BLA/navigation/navigation/: package.xml
BLA/navigation/navigation/launch/: amcl.launch  default.rviz  navigation.launch
BLA/navigation/navigation/param/: costmap_common_params_burger.yaml  local_costmap_params.yaml  move_base_params.yaml
bla_sniper/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
bla_sniper/src/: ar_sniper.cpp  camera_subscriber.cpp  camera_subscriber.py
burger_navigation/launch/: burger_navigation.launch
burger_navigation/maps/: default.pgm
burger_navigation/param/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml
burger_navigation/rviz/: burger_navigation.rviz  red_bot_navigation.rviz
burger_sakuteki/: CMakeLists.txt  package.xml
burger_sakuteki/src/: burger_sakuteki.cpp  camera_subscriber.cpp
burger_war/: CMakeLists.txt  package.xml
burger_war/launch/: obstacle_detector.launch  sim_level_3_clubhouse.launch  sim_robot_run.launch  your_burger.launch
burger_war/scripts/: BDA_strategy.py  ai_play.py  attack_strategy.py  attackrun.py  ball_finder.py  behavior.py  behavior_XXX.py  behavior_attack.py  behavior_disturb.py  behavior_escape.py  bola_de_arroz.py  calc_motion_planning.py  dual_network.py  enemy_finder.py  enemy_finder_from_camera.py  enemy_pos_from_lider.py  enemy_pos_from_score.py  enemy_prob_map .csv.bk  enemy_prob_map.csv  enemy_prob_map.pgm  game.py  image_function.py  img2navgrid.py  level_2_teriyaki.py  level_3_clubhouse.py  move_base.py  my_map.yaml  navirun.py  pub_my_pose.py  pub_score.py  pv_mcts.py  rem_time.py  self_play.py  smach_vier.py  test_wallRun.py  train_network.py
data/: 20200827144321.history
doc/: BEGINNER_NOTE.md  CloudInstall.md
rader_find_enemy/: CMakeLists.txt  manifest.xml  package.xml
rader_find_enemy/src/: rader_find_enemy.py
rotate_recovery/src/: rotate_recovery.cpp
scripts/: pkill.sh  start.sh
teb_local_planner/cfg/: teb_local_planner.yaml
